<resources>
    <string name="app_name">Unit-Converter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="Categories">Categories</string>
    <!-- insert categories -->
    <!-- A -->
    <string name="acce">Acceleration</string>
    <!-- B -->

    <!-- C -->
    <string name="cook">Cooking</string>
    <!-- D -->
    <string name="data">Data Storage</string>
    <string name="dist">Length/Distance</string>
    <!-- E -->

    <!-- T -->
    <string name="time">Time</string>
    <string name="weight">Weight</string>
    <string name="dialog_input_unit">Input number</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
</resources>
